--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cape Masai Leather</title>
+    <title>Cape Masai Leather  website</title>
 </head>
 <body>
-    
+   
 </body>
 </html>
