--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Cape Masai Leather  website</title>
 </head>
 <body>
+
+
+<button>hello</button>
    <!--#964b00, #534439   , #baa89b  ,  #27a65f  -->
 </body>
 </html>
